--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,10 @@
 /.vs/VSWorkspaceState.json
 /.vs/slnx.sqlite
 /.vs/ProjectSettings.json
-/.vs/Black-Sea-Armoury/v16
-/.vs/Black-Sea-Armoury
+/.vs/Black-Sea-Armoury/
+/.vs/Black-Sea-Armoury/v17/
+/.vs/Black-Sea-Armoury/FileContentIndex/
+*.vsidx
+
+*.wsuo
+/.vs/Black-Sea-Armoury-alpha-/v17/DocumentLayout.json
